objects/Constomer__c.object
<CustomObject>
    <fields>
        <fullName>Amount_With_Fee__c</fullName>
        <formula>ScanAttendee_Fee__c  +  Total_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount With Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Barcode__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Barcode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Is_Invoice_mail_Send__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Invoice mail Send</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Isinserted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Isinserted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Status__c</fullName>
        <label>Payment Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Paid</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Free</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ScanAttendee_Fee__c</fullName>
        <label>ScanAttendee Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ticket_Types__c</fullName>
        <label>Ticket Types</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Uniq_Number__c</fullName>
        <label>Uniq Number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dontShow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>dontShow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>payKey__c</fullName>
        <label>payKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Transaction Info</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Email__c</columns>
        <columns>Isinserted__c</columns>
        <columns>Ticket_Types__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Total_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Isinserted__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>customer key Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>